# hyperbase-parser-ab

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
scripts/: generate_alpha_training_data.py  train_atomizer.py
src/hyperbase_parser_ab/: __init__.py  alpha.py  atomizer.py  genparse.py  lang_models.py  language_specific.py  parser.py  repl.py  rules.py  sentensizer.py  trace.py
tests/: test_parser.py  test_parser_helpers.py  test_rules.py
