[project]
name = "hyperbase-parser-ab"
version = "0.1.0"
description = "Semantic Hypergraph Alpha-Beta Parser"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hyperbase",
    "scikit-learn>=1.3.0",
    "spacy>=3.8.0",
    "torch>=2.0.0",
    "transformers>=4.46.0",
    "pip",  # so that spaCy models can be easily installed with uv
]

[tool.uv.sources]
hyperbase = { workspace = true }

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.2.2",
    "pre-commit>=3.6.2",
    "types-passlib>=1.7.7.20240106",
    "coverage>=7.4.3",
    "datasets>=4.0.0",
]

[project.entry-points."hyperbase.parsers"]
alphabeta = "hyperbase_parser_ab:AlphaBetaParser"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py310"
