[project]
name = "hyperbase-parser-ab"
dynamic = ["version"]
description = "Semantic Hypergraph AlphaBeta Parser"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Telmo Menezes et al.", email = "telmo@telmomenezes.net" },
]
keywords = [
    "NLP",
    "AI",
    "Knowledge Representation",
    "Natural Language Understanding",
    "Parsing",
    "Semantic Hypergraphs",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "hyperbase>=0.9.0",
    "scikit-learn>=1.3.0",
    "spacy>=3.8.0",
    "torch>=2.0.0",
    "transformers>=4.46.0",
    "pip",  # so that spaCy models can be easily installed with uv
]

[tool.uv.sources]
hyperbase = { workspace = true }

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.2.2",
    "pre-commit>=3.6.2",
    "types-passlib>=1.7.7.20240106",
    "coverage>=7.4.3",
    "datasets>=4.0.0",
    "pytest>=9.0.0",
]

[project.urls]
Homepage = "https://hyperquest.ai/hyperbase"

[project.entry-points."hyperbase.parsers"]
alphabeta = "hyperbase_parser_ab:AlphaBetaParser"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["src/hyperbase_parser_ab"]

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py310"
